Refactor historian gateway module to rename classes, improve logging, and update configuration file structures.